--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,3 +2,10 @@
     width: 100%;
     min-height: 100vh;
 }
+
+.login{
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+}
