--- a/src/css/Photo.css
+++ b/src/css/Photo.css
@@ -5,13 +5,7 @@
     border-radius: 3px;
     cursor: pointer;
     transition: all 0.2s ease ;
-}
-
-.photo:hover{
-    filter: brightness(90%);
-}
-.photo:active{
-    transform: scale(0.98);
+    position: relative;
 }
 
 .photo__img{
@@ -21,4 +15,38 @@
     border-radius: 3px;
 }
 
+.photo:hover{
+    filter: brightness(90%);
+}
+.photo:active{
+    transform: scale(0.98);
+}
 
+.photo:hover .photo__options {
+    display: flex;
+}
+
+.photo__options{
+    background-color: rgba(245, 245, 245, 0.785);
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    transition: all 0.3s ease;
+    padding: 0.5rem;
+}
+
+.photo__optionsName{
+    margin: 0 0.5rem;
+    flex: 1;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    user-select: none;
+}
