--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,11 +1,11 @@
-.homeview{
+.homepage{
     flex: 1;
     width: 100%;
     max-width: 1300px;
     padding: 0.5rem 1rem;
 }
 
-.homeview__photos{
+.homepage__photos{
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-gap: 0.5rem;
@@ -14,7 +14,7 @@
     border-bottom: 1px solid lightgray;
 }
 
-.homeview__photoAlbum{
+.homepage__photoAlbum{
     background-color: rgb(235, 235, 235);
     width: 100%;
     height: 100%;
@@ -30,27 +30,27 @@
     user-select: none;
 }
 
-.homeview__photoAlbum:hover{
+.homepage__photoAlbum:hover{
     filter: brightness(90%);
 }
-.homeview__photoAlbum:active{
+.homepage__photoAlbum:active{
     transform: scale(0.97);
 }
 
 @media only screen and (max-width: 900px){
-    .homeview__photos{
+    .homepage__photos{
         grid-template-columns: repeat(4,1fr);
     }
 }
 
 @media only screen and (max-width: 700px){
-    .homeview__photos{
+    .homepage__photos{
         grid-template-columns: repeat(3,1fr);
     }
 }
 
 @media only screen and (max-width: 450px){
-    .homeview__photos{
+    .homepage__photos{
         grid-template-columns: repeat(2,1fr); 
     }
 }
